Added responsive meta tag

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <div class="container h-100" style="width: 60%; margin:auto; ">
                 <a href="#" class="navbar-brand bg-info text-white p-3">Indima Dias</a>
                 
-                <div class="container navbar-right w-50 mr-0"> <!--container for the navgation bar-->
+                <div class="container navbar-right w-50 mr-0 navbar-collapse"> <!--container for the navgation bar-->
                             
                     <a href="./index.html" class="nav-item p-2 text-center  text-info">About</a>
                     <a href="./portfolio.html" class="nav-item p-2 text-info">Portfolio</a>
