--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="container h-100" style="width: 60%; margin:auto; ">
                 <a href="#" class="navbar-brand bg-info text-white p-3">Indima Dias</a>
                 
-                <div class="container navbar-right w-50 mr-0"> <!--container for the navgation bar-->
+                <div class="container navbar-right w-50 mr-0 navbar-collapse"> <!--container for the navgation bar-->
                             
-                    <a href="./index.html" class="nav-item p-2 text-center border-right">About</a>
-                    <a href="./portfolio.html" class="nav-item p-2 border-right">Portfolio</a>
+                    <a href="./index.html" class="nav-item p-2 text-center">About</a>
+                    <a href="./portfolio.html" class="nav-item p-2">Portfolio</a>
                     <a href="./contact.html" class="nav-item p-2">Contact</a>
                 </div>
             </div>
