--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Portfolio with Bootstrap</title>
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" type="text/css"  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="CSS/style.css">
@@ -33,13 +33,13 @@
             <div class="row mt-3 ml-3 mb-4">
                 <div class="col-md-4 card pl-0 pr-0 mr-3 ">
                     <img src="./images/people-q-c-640-480-6.jpg" alt="" class="card-img-top">
-                    <div class=" card-img-overlay bg-info imgText" style="top:150px">
+                    <div class=" card-img-overlay bg-info imgText">
                         My Collection
                     </div>
                 </div>
                 <div class="col-md-4 card pl-0 pr-0 mr-3">
                         <img src="./images/technics-q-c-640-480-1.jpg" alt="" class="card-img-top">
-                        <div class=" card-img-overlay bg-info imgText" style="top:150px">
+                        <div class=" card-img-overlay bg-info imgText" >
                                 Learn Sinhala
                         </div>
                 </div>
@@ -47,13 +47,13 @@
             <div class="row mt-3 ml-3 mb-4">
                     <div class="col-md-4 card pl-0 pr-0 mr-3">
                             <img src="./images/abstract-q-c-640-480-3.jpg" alt="" class="card-img-top">
-                            <div class=" card-img-overlay bg-info imgText" style="top:150px">
+                            <div class=" card-img-overlay bg-info imgText" >
                                     Painting World
                             </div>
                     </div>
                     <div class="col-md-4 card pl-0 pr-0 mr-3">
                             <img src="./images/city-q-c-640-480-7.jpg" alt="" class="card-img-top">
-                            <div class=" card-img-overlay bg-info imgText" style="top:150px">
+                            <div class=" card-img-overlay bg-info imgText" >
                                     Next Destination
                             </div>
                     </div>
@@ -62,7 +62,7 @@
             <div class="row mt-3 ml-3 mb-4">
                     <div class="col-md-4 card pl-0 pr-0 mr-3">
                             <img src="./images/food-q-c-640-480-1.jpg" alt="" class="card-img-top">
-                            <div class=" card-img-overlay bg-info imgText" style="top:150px">
+                            <div class=" card-img-overlay bg-info imgText" >
                                   Cook and Bake
                             </div>
                     </div>                                
